force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/NCMT_TCO_Lifecycle_Input__c.object-meta.xml
<CustomObject>
    <label>NCMT TCO Lifecycle Input</label>
    <nameField>
        <displayFormat>Lifecycle-{00000}</displayFormat>
        <label>TCO Lifecycle Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT TCO Lifecycle Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>