force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>Construction/Move in (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>