force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Construction_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Construction_Monthly_Cost__c</fullName>
    <formula>If(And(Construction__c &lt;&gt; 0, Not(IsBlank(Construction__c))), ((NCMT_Project__r.EMIC__c * NCMT_Project__r.Total_ECC__c) + NCMT_Project__r.Total_ECC__c) / Construction__c, 0)
/*  + ( NCMT_Project__r.EDRC__c * NCMT_Project__r.Total_ECC__c) */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>