force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Construction_Start__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start__c</fullName>
    <formula>ADDMONTHS( Design_Start__c , Design__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Start</label>
    <type>Date</type>
</CustomField>