force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>Design (months)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>