force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Design_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Design_Monthly_Cost__c</fullName>
    <formula>If(And(Design__c &lt;&gt; 0, Not(IsBlank(Design__c))),(NCMT_Project__r.EDRC__c *  NCMT_Project__r.Total_ECC__c ) /  Design__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>