force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Design_Start__c.field-meta.xml
<CustomField>
    <fullName>Design_Start__c</fullName>
    <description>When pre-design is added again, update this to ADDMONTHS( Start_Date__c, Planning_and_Pre_design__c)</description>
    <formula>Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Start</label>
    <type>Date</type>
</CustomField>