force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Design_Use_Cost__c.field-meta.xml
<CustomField>
    <fullName>Design_Use_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design: Use Cost</label>
    <type>Checkbox</type>
</CustomField>