force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/End_Major_Maint_System_Replace_Early__c.field-meta.xml
<CustomField>
    <fullName>End_Major_Maint_System_Replace_Early__c</fullName>
    <inlineHelpText>Number of years to be subtracted from the End of Maintenance &amp; Operations date for applying periodic Core Shell Cost Details where the related Core Shell Cost Parameter Type1 field equals &quot;Maintenance&quot;.</inlineHelpText>
    <label>(deprecated) End Major Maint &amp; Replace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>