force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/End_of_Maintenance_Operations__c.field-meta.xml
<CustomField>
    <fullName>End_of_Maintenance_Operations__c</fullName>
    <formula>Date( Year(Start_for_Maintenance_Operations__c) + Number_of_Years_of_Operation__c, Month(Start_for_Maintenance_Operations__c), Day(Start_for_Maintenance_Operations__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Maintenance Operations</label>
    <type>Date</type>
</CustomField>