force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Include_Tenant_Refresh_Costs__c.field-meta.xml
<CustomField>
    <fullName>Include_Tenant_Refresh_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Tenant Refresh Costs</label>
    <type>Checkbox</type>
</CustomField>