force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/NCMT_TCO_Annual_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>NCMT_TCO_Annual_Cost_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT TCO Annual Cost Summary</label>
    <referenceTo>NCMT_TCO_Annual_Cost_Summary__c</referenceTo>
    <relationshipName>TCO_Lifecycle_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>