force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/New_fit_out_every_years__c.field-meta.xml
<CustomField>
    <fullName>New_fit_out_every_years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New fit-out every (years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>