force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Number_of_Years_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_of_Operation__c</fullName>
    <label>Number of Years of Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>