force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Period_of_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Analysis__c</fullName>
    <label>Period of Analysis (years)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>