force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Planning_and_Pre_design__c.field-meta.xml
<CustomField>
    <fullName>Planning_and_Pre_design__c</fullName>
    <label>Planning and Pre-design (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>