force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Planning_and_Pre_design_Start__c.field-meta.xml
<CustomField>
    <fullName>Planning_and_Pre_design_Start__c</fullName>
    <formula>Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planning and Pre-design Start</label>
    <type>Date</type>
</CustomField>