force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Pre_design_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Pre_design_Monthly_Cost__c</fullName>
    <formula>If(And(Planning_and_Pre_design__c &lt;&gt; 0, Not(IsBlank(Planning_and_Pre_design__c))),(NCMT_Project__r.EDRC__c * NCMT_Project__r.Total_ECC__c  * 0.15) /  Planning_and_Pre_design__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-design Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>