force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Start_for_Maintenance_Operations__c.field-meta.xml
<CustomField>
    <fullName>Start_for_Maintenance_Operations__c</fullName>
    <formula>ADDMONTHS(  Construction_Start__c  ,  Construction__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start for Maintenance/Operations</label>
    <type>Date</type>
</CustomField>