force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/TCO_Project_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>TCO_Project_Cost_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Project Cost Rate</label>
    <referenceTo>NCMT_Project_Cost_Rate__c</referenceTo>
    <relationshipLabel>NCMT TCO Lifecycle Inputs</relationshipLabel>
    <relationshipName>NCMT_TCO_Lifecycle_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>