force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Total_Escalated_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Total_Escalated_Discounted__c</fullName>
    <label>Total Escalated &amp; Discounted</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>