force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Total_Operations_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Total_Operations_Maintenance__c</fullName>
    <label>Total Operations &amp; Maintenance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>