force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Total_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Total_Replacement__c</fullName>
    <label>Total Replacement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>