force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Total_TI_CRR__c.field-meta.xml
<CustomField>
    <fullName>Total_TI_CRR__c</fullName>
    <label>Total TI CRR</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>