force-app/main/default/objects/NCMT_TCO_Lifecycle_Input__c/fields/Years_of_Routine_Periodic_Maint__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Routine_Periodic_Maint__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Years of Routine Periodic Maint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>